[gd_scene load_steps=7 format=1]

[ext_resource path="res://LevelEditor/LevelEditor.gd" type="Script" id=1]
[ext_resource path="res://LevelEditor/EditorUnitBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://CursorArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://InputHandler.tscn" type="PackedScene" id=4]
[ext_resource path="res://LevelEditor/PieceForm.tscn" type="PackedScene" id=5]
[ext_resource path="res://LevelEditor/EditorTurnSelector.tscn" type="PackedScene" id=6]

[node name="LevelEditor" type="Node2D"]

script/script = ExtResource( 1 )

[node name="EditorUnitBar" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 59.5369, 950.05 )

[node name="CursorArea" parent="." instance=ExtResource( 3 )]

[node name="InputHandler" parent="." instance=ExtResource( 4 )]

[node name="PieceForm" parent="." instance=ExtResource( 5 )]

visibility/visible = false
transform/pos = Vector2( 43.1693, 374.892 )

[node name="EditorTurnSelector" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( -2.27203, 59.0739 )


